# objectbox-cpp

./: CMakeLists.txt  READ.MD  conanfile.txt
data/: task.fbs
data/database/: data.mdb  lock.mdb
data/mydb/: data.mdb  lock.mdb
src/: main.cpp
src/database/: database.cpp  database.h
src/repository/: repository.cpp  repository.h
src/widget/: ui.cpp  ui.h
utils/: headers.h
